--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
   - if [[ "$TRAVIS_PYTHON_VERSION" == '2.6' ]]; then
-      pip install -r requirements26.txt
+      pip install -r requirements26.txt;
     fi
 script:
   - python bin/validate_checksum.py youslist.txt
