--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,17 @@ python:
   - 2.6
   - 2.7
   - 3.6
+addons:
+  apt:
+    sources:
+      - debian-sid
+    packages:
+      - shellcheck
 install:
   - pip install -r requirements.txt
   - if [[ "$TRAVIS_PYTHON_VERSION" == '2.6' ]]; then
       pip install -r requirements26.txt;
     fi
 script:
+  - bash -c 'shellcheck bin/release bin/test'
   - bin/test
