--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: python
 sudo: false
-python:
-  - 2.7
-  - 3.7
+matrix:
+  include:
+    - python: 2.7
+      dist: trusty
+      sudo: false
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
   - pip install -r requirements.txt
-  - if [[ "$TRAVIS_PYTHON_VERSION" == '2.6' ]]; then
-      pip install -r requirements26.txt;
-    fi
 script:
   - bash -c 'shellcheck bin/release bin/test'
   - bin/test
