--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,15 @@ matrix:
     - python: 2.7
       dist: trusty
       sudo: false
+    - python: 3.4
+      dist: trusty
+      sudo: false
+    - python: 3.5
+      dist: trusty
+      sudo: false
+    - python: 3.6
+      dist: trusty
+      sudo: false
     - python: 3.7
       dist: xenial
       sudo: true
