--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ matrix:
 install:
   - pip install -r requirements.txt
 script:
-  - bash -c 'shellcheck bin/release bin/test'
+  - shellcheck bin/release bin/test
   - bin/test
