Run flake8 against python files

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
   - 3.6
   - 3.7
   - 3.8
+install:
+  - pip install flake8
 script:
+  - flake8 bin/
   - shellcheck bin/release bin/test
   - bin/test
