--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - pip install flake8
 script:
   - flake8 bin/
-  - shellcheck bin/release bin/test
+  - shellcheck bin/generate_note bin/install_pkg bin/release bin/test
   - bin/test
