--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,14 @@ jobs:
       - name: Run tests
         run: |
           bin/test
+  jsdelivrpurge:
+    name: Purge jsDelivr cache
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+    needs: build
+    if: ${{ always() && github.event_name == 'push' && github.ref_name == 'master' && needs.build.result == 'success' }}
+    steps:
+      - name: Run jsDelivr-Purge
+        uses: List-KR/jsdelivr-purge@5.0.0
