--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,7 @@ jobs:
         uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Intall dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+          pip-install: flake8
       - name: Lint with flake8
         run: |
           flake8 bin/
